@@ -1,5 +1,3 @@
-11/06/2025:
-[+] Added Hotline Miami 1 (Thanks for the suggestion o-333)
-[+] Added Metroid Fusion (Thanks for the suggestion Franklin)
-[+] Added Metroid Mission Zero (Thanks for the suggestion Franklin)
-[+] Made FNAF 1 a better version (Thanks for the bug report)
+11/07/2025:
+[-] Removed Edubrain.ai due to it being blocked, may come back if I develop a proxy.
+[!] Regarding proxies, I still do not want to add a proxy unless I can fully make it unblockable. The whole point of No Name Games is for everything to be untouchable, but a proxy does not do that. I know I kinda contradicted myself with edubrain.ai, but it was unblocked for a long time, lol. Also again, I don't make money from No Name Games and webservers cost money.
