@@ -324,10 +324,6 @@
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/badicecream/badicecream5.xml",
         "img": "badicecream.jpg"
     },
-    "(AI HOMEWORK SOLVER) Edubrain.ai": {
-        "url": "NOTXML;https://edubrain.ai",
-        "img": "edubrain.png"
-    },
     "(UNMONITORED) Google": {
         "url": "NOTXML;https://www.google.com/?igu=1",
         "img": "google.png"
